--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Impresiones Serigrafía Art</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="logos/logo1.jpg" type="image/png">
 </head>
 <body>
     <nav> 
+        <button class="menu-btn" onclick="toggleMenu()">☰</button>
         <ul> 
             <li><a id="linkanimacion" href="#fondo2">Portada</a></li> 
             <li><a href="#quienesSomos">¿Quiénes somos?</a></li> 
@@ -25,7 +26,6 @@
             Teléfono local 26087402
         </p>
     </div>
-    <!--Quienes somos-->
     <div id="quienesSomos" class="section">
         <div id="contenedor0">
             <div id="contenedor1">
