--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             <li><a href="#tecnicasSerigraficas">Técnica Serigráfica</a></li> 
             <li><a href="#tecnicasSublimacion">Técnica en sublimación</a></li> 
             <li><a href="#tecnicaVinil">Técnica corte vinil</a></li> 
-            <li><a href="#tecnicasDigital">Técnica digital</a></li> 
+            <li><a href="#tecnicasDigital">Técnica digital</a></li>
+            <li><a href="#redes">Redes sociales</a></li> 
         </ul> 
     </nav>
     
@@ -78,15 +79,14 @@
     </div>
     <div id="tecnicasSerigraficas" class="section">
         <div id="ts1" class="carousel-slide active" >
-            <div class="titulo">
-                <h1>Técnicas de Serigrafía</h1>
-            </div>
             <div id="agrupacion1">
+                
                 <div class="carousel">
                     <img src="imagenes Flores/tecnicas serigraficas/MALLA TENSADA 1.jpg" alt="malla1" class="carousel-image">
                     <img src="imagenes Flores/tecnicas serigraficas/MALLA TENSADA 2.jpg" alt="malla2" class="carousel-image">  
                 </div>
                 <div class="descripcion1">
+                    <h1>Técnicas de Serigrafía</h1>
                     <h2>Marcos de madera tensados</h2>
                     <p>Con abertura de malla 43, 62, 90, 120 y 140 hilos, en color blanco y amarillo, de las siguientes medidas: <br>
                         • 20 x 30 cm <br>
@@ -97,15 +97,13 @@
             </div>
         </div>
         <div id="ts2" class="carousel-slide">
-            <div class="titulo">
-                <h1>Técnicas de Serigrafía</h1>
-            </div>
             <div id="agrupacion1">
                 <div class="carousel">
                     <img src="imagenes Flores/tecnicas serigraficas/PLAYERAS ISART 1.jpg" alt="PLAYERAS ISART" class="carousel-image">
                     <img src="imagenes Flores/tecnicas serigraficas/BOLSAS PUBLICITARIAS .jpg" alt="BOLSAS PUBLICITARIA" class="carousel-image">  
                 </div>
                 <div class="descripcion1">
+                    <h1>Técnicas de Serigrafía</h1>
                     <h2>Serigrafia textil:</h2>
                     <p>Estampado de uno a 6 colores, la impresión puede ser en lienzo o piezas:<br>
                         • Playeras<br>
@@ -115,15 +113,13 @@
             </div>
         </div>
         <div id="ts3" class="carousel-slide">
-            <div class="titulo">
-                <h1>Técnicas de Serigrafía</h1>
-            </div>
             <div id="agrupacion1">
                 <div class="carousel">
                     <img src="imagenes Flores/tecnicas serigraficas/CALENDARIOS PUBLICITARIOS.jpg" alt="CALENDARIOS PUBLICITARIOS" class="carousel-image">
                     <img src="imagenes Flores/tecnicas serigraficas/FOLDER FOTOGRAFICO 2.jpg" alt="FOLDER FOTOGRAFICO" class="carousel-image">  
                 </div>
                 <div class="descripcion1">
+                    <h1>Técnicas de Serigrafía</h1>
                     <h2>Papelería fina en:</h2>
                     <ul class="lista-descripcion">
                         <li>Hojas membretadas</li>
@@ -143,15 +139,13 @@
     </div>
     <div id="tecnicasSublimacion" class="section">
         <div id="tsn4">
-            <div class="titulo2">
-                <h1>Técnica en sublimación</h1>
-            </div>
             <div id="agrupacion2">
                 <div class="carousel">
                     <img src="imagenes Flores/tecnica en sublimacion/TARROS Y BOTELLAS.jpeg.jpg" alt="TARROS Y BOTELLAS" class="carousel-image">
                     <img src="imagenes Flores/tecnica en sublimacion/TERMOS ISART.jpg" alt="Termos" class="carousel-image">  
                 </div>
                 <div class="descripcion2">
+                    <h1>Técnica en sublimación</h1>
                     <p>Tazas de 11 oz mágicas, glitter, espejo, aperlada, negra con ventana blanca, y cónicas de 12 y 17 oz., tarros satinados y transparentes de 16 y 22 oz., vasos satinados de 17 oz con interior de color y termos. <br>
                         Productos en diferentes tonos, checar disponibilidad de color.
                     </p>
@@ -159,7 +153,20 @@
             </div>
         </div>
     </div>
-    <div id="tecnicaVinil" class="section">tecnicaVinil</div>
+    <div id="tecnicaVinil" class="section">
+        <div id="tsn4">
+            <div id="agrupacion2">
+                <div class="carousel">
+                    <img src="imagenes Flores/tecnica corte vinil/CORTE VINIL ISART.jpg" alt="CORTE VINIL" class="carousel-image">
+                </div>
+                <div class="descripcion2">
+                    <h2>Técnica digital u offset</h2>
+                    <p>Personalizado de nombres y marcas en un sólo tono: en vasos, cilindros, termos y gorras.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
     <div id="tecnicasDigital" class="section">
         <div id="tsn4">
             <div id="agrupacion2">
@@ -174,9 +181,33 @@
                     <img src="imagenes Flores/tecnicas digitales/tarjetas y volantes isart.jpg" alt="tarjetas y volantes isart" class="carousel-image">
                 </div>
                 <div class="descripcion2">
-                    <h2>Técnica digital u offset</h2>
+                    <h1>Técnica digital u offset</h1>
                     <p><strong>Papelería personalizada:</strong> libretas profesionales tamaño media carta y carta de 80 0 100 hojas en papel bond, mouse pad para empresas, etiquetas escolares o etiquetado para tus productos, chips bags para eventos sociales y credenciales PVC empresariales.<br>
                         <strong>Promocionales y/o publicitarios:</strong> lonas de alta y mediana calidad, tarjetas de presentación y volantes para promocionar tu negocio.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="redes" class="section">
+        <div id="tsn4">
+            <div id="agrupacion2">
+                <div class="carousel">
+                    <img src="logos/logo1.jpg" alt="logo" class="carousel-image">
+                    <img src="logos/facebook.png" alt="logo de facebook" class="carousel-image">
+                    <img src="logos/whatsapp.png" alt="logo de whatsapp" class="carousel-image">
+                    <img src="logos/instagram.png" alt="logo de instagram" class="carousel-image">
+                    <img src="logos/tiktok.png" alt="logo de tiktok" class="carousel-image">
+                </div>
+                <div class="descripcion2">
+                    <h2>Redes sociales:</h2>
+                    <p>Facebook: <a href="https://www.facebook.com/profile.php?id=100008283542616&sk=about" target="_blank">Impresiones Serigrafía Art</a>
+                        <br>Whatsapp 1: <a href="https://wa.me/5528431323" target="_blank">55 2843 1323</a>
+                        <br>Whatsapp 2: <a href="https://wa.me/5575009658" target="_blank">55 7500 9658</a>
+                        <br>TikTok: <a href="" target="_blank"></a>
+                        <br>Instagram: <a href="" target="_blank"></a>
+                        <br>Telefono Local: 26087402
                     </p>
                 </div>
             </div>
