--- a/index.html
+++ b/index.html
@@ -197,16 +197,14 @@
                     <img src="logos/logo1.jpg" alt="logo" class="carousel-image">
                     <img src="logos/facebook.png" alt="logo de facebook" class="carousel-image">
                     <img src="logos/whatsapp.png" alt="logo de whatsapp" class="carousel-image">
-                    <img src="logos/instagram.png" alt="logo de instagram" class="carousel-image">
-                    <img src="logos/tiktok.png" alt="logo de tiktok" class="carousel-image">
+                    
                 </div>
                 <div class="descripcion2">
                     <h2>Redes sociales:</h2>
                     <p>Facebook: <a href="https://www.facebook.com/profile.php?id=100008283542616&sk=about" target="_blank">Impresiones Serigrafía Art</a>
                         <br>Whatsapp 1: <a href="https://wa.me/5528431323" target="_blank">55 2843 1323</a>
                         <br>Whatsapp 2: <a href="https://wa.me/5575009658" target="_blank">55 7500 9658</a>
-                        <br>TikTok: <a href="" target="_blank"></a>
-                        <br>Instagram: <a href="" target="_blank"></a>
+                        <br>Correo: impresionesyserigrafia_art@yahoo.com.mx
                         <br>Telefono Local: 26087402
                     </p>
                 </div>
